--- a/styles.scss
+++ b/styles.scss
@@ -5,14 +5,82 @@ html {
     margin: 0;
 
     body {
-        background: linear-gradient(rgba(45, 28, 93, 0.6), rgba(45, 28, 93, 0.6)), url('images/background.png');
+        margin: 0;
+        background: linear-gradient(rgba(45, 28, 93, 0.75), rgba(45, 28, 93, 0.75)), url('images/background.png');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        height: 100vh;
 
-        div {
-            width: 100vw;
-            height: 100vh;
+        .container {
+            width: 80%;
+            height: 90%;
+            display: flex;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto;
+
+            .pic-numbers {
+                max-width: 561px;
+                width: 100%;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+
+            .main-wrapper {
+                display: flex;
+                flex-direction: column;
+                text-align: left;
+                max-width: 760px;
+
+                h1 {
+                    color: rgba(255, 255, 255, 1);
+                    font-family: "Roboto", sans-serif;
+                    font-size: 80px;
+                    font-weight: 700;
+                    line-height: 100%;
+                    margin: 0;
+                }
+
+                input {
+                    color: rgba(212, 212, 212, 1);
+                    background: rgba(23, 14, 49, 0.72);
+                    font-family: "Inter", sans-serif;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 28px;
+                    width: 375px;
+                    border: none;
+                    padding: 14px 16px;
+                    margin: 24px 0 8px;
+                }
+
+                label {
+                    color: rgba(222, 222, 222, 1);
+                    font-family: "Inter", sans-serif;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 20px;
+                    width: 375px;
+                    margin: 0 0 24px;
+                }
+
+                button {
+                    color: rgba(194, 194, 194, 1);
+                    background: rgba(238, 238, 238, 1);
+                    font-family: "Inter", sans-serif;
+                    font-weight: 700;
+                    font-size: 18px;
+                    line-height: 21px;
+                    padding: 8px 16px;
+                    width: 256px;
+                    border: none;
+                }
+            }
         }
     }
 }
