--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,7 @@ html {
 
     body {
         margin: 0;
-        background: linear-gradient(rgba(45, 28, 93, 0.75), rgba(45, 28, 93, 0.75)), url('images/background.png');
+        background: linear-gradient(rgba(45, 28, 93, 0.95), rgba(45, 28, 93, 0.95)), url('images/background.png');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -37,6 +37,47 @@ html {
                 text-align: left;
                 max-width: 760px;
 
+                .wrong-answer {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 100%;
+                    padding: 34px 37px 49.5px 32px;
+                    display: flex;
+                    background: rgba(170, 2, 2, 0.33);
+
+                    img {
+                        width: 146px;
+                        height: 148px;
+                        margin-right: 20px;
+                    }
+
+                    .tip {
+                        color: rgba(255, 255, 255, 1);
+                        font-family: "Roboto", sans-serif;
+                        line-height: 100%;
+                        margin: 0;
+                        
+
+                        h2 {
+                            font-weight: 700;
+                            font-size: 64px;
+                        }
+
+                        p {
+                            font-weight: 400;
+                            font-size: 32px;
+
+                            span {
+                                background: rgba(211, 30, 62, 1);
+                                padding: 1px 8px;
+                                font-weight: 900;
+                                font-size: 32px;
+                            }
+                        }
+                    }
+                }
+
                 h1 {
                     color: rgba(255, 255, 255, 1);
                     font-family: "Roboto", sans-serif;
@@ -46,40 +87,56 @@ html {
                     margin: 0;
                 }
 
-                input {
-                    color: rgba(212, 212, 212, 1);
-                    background: rgba(23, 14, 49, 0.72);
-                    font-family: "Inter", sans-serif;
-                    font-weight: 400;
-                    font-size: 18px;
-                    line-height: 28px;
-                    width: 375px;
-                    border: none;
-                    padding: 14px 16px;
-                    margin: 24px 0 8px;
-                }
+                #guess {
+                    display: flex;
+                    flex-direction: column;
 
-                label {
-                    color: rgba(222, 222, 222, 1);
-                    font-family: "Inter", sans-serif;
-                    font-weight: 400;
-                    font-size: 14px;
-                    line-height: 20px;
-                    width: 375px;
-                    margin: 0 0 24px;
-                }
+                    input {
+                        color: rgba(212, 212, 212, 1);
+                        background: rgba(23, 14, 49, 0.72);
+                        font-family: "Inter", sans-serif;
+                        font-weight: 400;
+                        font-size: 18px;
+                        line-height: 28px;
+                        width: 375px;
+                        border: none;
+                        padding: 14px 16px;
+                        margin: 24px 0 8px;
+                        appearance: none;
+                        -moz-appearance: textfield;
 
-                button {
-                    color: rgba(194, 194, 194, 1);
-                    background: rgba(238, 238, 238, 1);
-                    font-family: "Inter", sans-serif;
-                    font-weight: 700;
-                    font-size: 18px;
-                    line-height: 21px;
-                    padding: 8px 16px;
-                    width: 256px;
-                    border: none;
+                            &::-webkit-outer-spin-button,
+                            &::-webkit-inner-spin-button {
+                                -webkit-appearance: none;
+                                margin: 0;
+                        }
+                    }
+
+                    label {
+                        color: rgba(222, 222, 222, 1);
+                        font-family: "Inter", sans-serif;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 20px;
+                        width: 375px;
+                        margin: 0 0 24px;
+                    }
+
+                    button {
+                        color: rgba(194, 194, 194, 1);
+                        background: rgba(238, 238, 238, 1);
+                        font-family: "Inter", sans-serif;
+                        font-weight: 700;
+                        font-size: 18px;
+                        line-height: 21px;
+                        padding: 8px 16px;
+                        width: 256px;
+                        border: none;
+                    }
                 }
+            }
+            .victory {
+                display: none;
             }
         }
     }
