--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,34 @@ html {
             width: 256px;
             border: none; }
       html body .container .victory {
-        display: none; }
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        color: white;
+        font-family: "Roboto", sans-serif;
+        line-height: 100%;
+        font-weight: 700; }
+        html body .container .victory img {
+          width: 250px;
+          height: 250px; }
+        html body .container .victory h2 {
+          font-size: 80px; }
+        html body .container .victory p {
+          font-size: 40px;
+          padding: 0 3px 0 4px; }
+          html body .container .victory p span {
+            background: #9747ff; }
+        html body .container .victory button {
+          color: black;
+          background: #eeeeee;
+          font-family: "Inter", sans-serif;
+          font-weight: 700;
+          font-size: 18px;
+          line-height: 21px;
+          padding: 8px 16px;
+          width: 256px;
+          border: none; }
 
 /*# sourceMappingURL=styles.css.map */
