--- a/styles.scss
+++ b/styles.scss
@@ -38,13 +38,13 @@ html {
                 max-width: 760px;
 
                 .wrong-answer {
-                    display: flex;
+                    display: none;
                     align-items: center;
                     justify-content: center;
                     width: 100%;
                     padding: 34px 37px 49.5px 32px;
-                    display: flex;
                     background: rgba(170, 2, 2, 0.33);
+                    margin-bottom: 32px;
 
                     img {
                         width: 146px;
@@ -123,6 +123,7 @@ html {
                     }
 
                     button {
+                        cursor: pointer;
                         color: rgba(194, 194, 194, 1);
                         background: rgba(238, 238, 238, 1);
                         font-family: "Inter", sans-serif;
@@ -164,15 +165,16 @@ html {
                 }
 
                 button {
-                        color: rgba(0, 0, 0, 1);
-                        background: rgba(238, 238, 238, 1);
-                        font-family: "Inter", sans-serif;
-                        font-weight: 700;
-                        font-size: 18px;
-                        line-height: 21px;
-                        padding: 8px 16px;
-                        width: 256px;
-                        border: none;
+                    cursor: pointer;
+                    color: rgba(0, 0, 0, 1);
+                    background: rgba(238, 238, 238, 1);
+                    font-family: "Inter", sans-serif;
+                    font-weight: 700;
+                    font-size: 18px;
+                    line-height: 21px;
+                    padding: 8px 16px;
+                    width: 256px;
+                    border: none;
                 }
             }
         }
