--- a/styles.scss
+++ b/styles.scss
@@ -64,10 +64,18 @@ html {
                             font-size: 64px;
                         }
 
+                        #higher {
+                            display: none;
+                        }
+
+                        #lower {
+                            display: none;
+                        }
+
                         p {
                             font-weight: 400;
                             font-size: 32px;
-
+                        
                             span {
                                 background: rgba(211, 30, 62, 1);
                                 padding: 1px 8px;
