--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,20 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100vh; }
+    min-height: 100vh; }
     html body .container {
       width: 80%;
-      height: 90%;
       display: flex;
       text-align: center;
       align-items: center;
       justify-content: center;
-      margin: 0 auto; }
+      margin: 0 auto;
+      height: auto; }
+      @media only screen and (max-width: 900px) {
+        html body .container {
+          display: block; }
+          html body .container .pic-numbers {
+            max-width: 300px; } }
       html body .container .pic-numbers {
         max-width: 561px;
         width: 100%; }
@@ -63,7 +68,7 @@ html {
         html body .container .main-wrapper h1 {
           color: white;
           font-family: "Roboto", sans-serif;
-          font-size: 80px;
+          font-size: clamp(30px 10vw 80px);
           font-weight: 700;
           line-height: 100%;
           margin: 0; }
@@ -77,7 +82,7 @@ html {
             font-weight: 400;
             font-size: 18px;
             line-height: 28px;
-            width: 375px;
+            max-width: 375px;
             border: none;
             padding: 14px 16px;
             margin: 24px 0 8px;
@@ -92,7 +97,7 @@ html {
             font-weight: 400;
             font-size: 14px;
             line-height: 20px;
-            width: 375px;
+            max-width: 375px;
             margin: 0 0 24px; }
           html body .container .main-wrapper #guess button {
             cursor: pointer;
@@ -103,7 +108,7 @@ html {
             font-size: 18px;
             line-height: 21px;
             padding: 8px 16px;
-            width: 256px;
+            max-width: 256px;
             border: none; }
       html body .container .victory {
         display: none;
@@ -116,7 +121,7 @@ html {
         line-height: 100%;
         font-weight: 700; }
         html body .container .victory img {
-          width: 250px;
+          max-width: 250px;
           height: 250px; }
         html body .container .victory h2 {
           font-size: 80px; }
@@ -134,7 +139,7 @@ html {
           font-size: 18px;
           line-height: 21px;
           padding: 8px 16px;
-          width: 256px;
+          max-width: 256px;
           border: none; }
 
 /*# sourceMappingURL=styles.css.map */
