--- a/styles.scss
+++ b/styles.scss
@@ -13,7 +13,7 @@ html {
         min-height: 100vh;
 
         .container {
-            width: 80%;
+            width: 95%;
             display: flex;
             text-align: center;
             align-items: center;
@@ -22,7 +22,7 @@ html {
             height: auto;
 
             @media only screen and (max-width: 900px) {
-                display: block;
+                flex-direction: column;
                 .pic-numbers {
                     max-width: 300px;
                 }
